add aoll secion

--- a/CSS/responsive.css
+++ b/CSS/responsive.css
@@ -9,4 +9,24 @@
   .brand {
     margin-top: 15px;
   }
+  #membership h2 {
+    font-size: 33px;
+  }
+  /* end  */
+  .left-side a {
+    margin-bottom: 32px;
+  }
+  /* end */
+  .h-left h3 {
+    font-size: 35px;
+    margin-top: 20px;
+    text-align: center;
+  }
+
+  .h-right {
+    margin-top: 30px;
+  }
+  .members {
+    margin-bottom: 29px;
+  }
 }
